--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <img src="./img/agency_banner.png" alt="Banner Image" />
     </div>
     <div class="container">
-      <h4>❀❀❀ REGISTRATION FORM ❀❀❀</h4>
+      <h4>REGISTRATION FORM 2024</h4>
       <form autocomplete="off" method="post" name="google-sheet" id="puja-form">
         <div class="row">
           <div class="input-field col s12 m6">
@@ -687,7 +687,7 @@
               required
             />
             <label for="electric_consumption_2021"
-              >ELECTRICAL CONSUMPTION YEAR 2021<span>*</span></label
+              >ELECTRICITY CONSUMPTION YEAR 2021<span>*</span></label
             >
           </div>
           <div class="input-field col s12 m6">
@@ -699,7 +699,7 @@
               required
             />
             <label for="electric_consumption_2022"
-              >ELECTRICAL CONSUMPTION YEAR 2022<span>*</span></label
+              >ELECTRICITY CONSUMPTION YEAR 2022<span>*</span></label
             >
           </div>
         </div>
@@ -713,7 +713,7 @@
               required
             />
             <label for="electric_consumption_2023"
-              >ELECTRICAL CONSUMPTION YEAR 2023<span>*</span></label
+              >ELECTRICITY CONSUMPTION YEAR 2023<span>*</span></label
             >
           </div>
           <div class="input-field col s12 m6">
@@ -877,6 +877,7 @@
               <li>9. Puja Permission 2023 - 10 pc</li>
               <li>10. Envelops - 20 pc</li>
               <li>11. PAN Card - 10 pc</li>
+              <li>12. VIP Entry Pass - 20 pc</li>
             </ul>
           </div>
           <div class="col s12 m6">
