--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
               </label>
               <label>
                 <input name="puja_type" type="radio" value="Theme-based" />
-                <span>Theme-based (Barowari)</span>
+                <span>Barowari</span>
               </label>
             </p>
           </div>
