--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
               required
             />
             <label for="materials_used"
-              >MATERIALS USED IN THE PUJA MANDOOP<span>*</span></label
+              >MATERIALS USED IN PUJA MANDOOP<span>*</span></label
             >
           </div>
         </div>
