--- a/index.html
+++ b/index.html
@@ -599,6 +599,33 @@
             >
           </div>
         </div>
+        <div class="row">
+          <div class="input-field col s12 m6">
+            <input
+              name="Idol_Artists_Name"
+              class="uppercase"
+              id="idol_artists_name"
+              type="text"
+              placeholder="Enter Your Idol Artist's Name"
+              required
+            />
+            <label for="idol_artists_name"
+              >IDOL ARTIST NAME<span>*</span></label
+            >
+          </div>
+          <div class="input-field col s12 m6">
+            <input
+              name="Idol_Artists_Phone_Number"
+              id="idol_artists_phone"
+              type="tel"
+              placeholder="Enter Your Idol Artist's Phone Number"
+              required
+            />
+            <label for="idol_artists_phone"
+              >IDOL ARTIST PHONE NO<span>*</span></label
+            >
+          </div>
+        </div>
 
         <div class="row">
           <div class="input-field col s12 m6">
