--- a/index.html
+++ b/index.html
@@ -58,8 +58,9 @@
           <div class="input-field col s12 m6">
             <select id="city" name="City" required>
               <option value="" disabled selected>Choose Your City</option>
-              <option value="Kolkata">Kolkata</option>
-              <option value="Howrah">Howrah</option>
+              <option value="Kolkata">KOLKATA</option>
+              <option value="Howrah">HOWRAH</option>
+              <option value="Howrah">OTHERS</option>
             </select>
             <label for="city" class="list">CITY<span>*</span></label>
           </div>
@@ -116,14 +117,16 @@
           <div class="input-field col s12 m6">
             <select id="zone" name="Zone" required>
               <option value="" disabled selected>Select Your Zone</option>
-              <option value="North Kolkata">North Kolkata</option>
-              <option value="Central Kolkata">Central Kolkata</option>
-              <option value="South Kolkata">South Kolkata</option>
-              <option value="East Kolkata">East Kolkata</option>
-              <option value="West Kolkata">West Kolkata</option>
-              <option value="Salt Lake">Salt Lake</option>
-              <option value="Howrah">Howrah</option>
-              <option value="North 24 Parganas">North 24 Parganas</option>
+              <option value="NORTH KOLKATA">NORTH KOLKATA</option>
+              <option value="CENTRAL KOLKATA">CENTRAL KOLKATA</option>
+              <option value="SOUTH KOLKATA">SOUTH KOLKATA</option>
+              <option value="EAST KOLKATA">EAST KOLKATA</option>
+              <option value="WEST KOLKATA">WEST KOLKATA</option>
+              <option value="SALT LAKE">SALT LAKE</option>
+              <option value="HOWRAH">HOWRAH</option>
+              <option value="NORTH 24 PARGANAS">NORTH 24 PARGANAS</option>
+              <option value="SOUTH 24 PARGANAS">SOUTH 24 PARGANAS</option>
+              <option value="OTHERS">OTHERS</option>
             </select>
             <label for="zone" class="list">ZONE<span>*</span></label>
           </div>
