--- a/index.html
+++ b/index.html
@@ -935,6 +935,11 @@
               <li>6. Bank Details - Cancelled Cheque / Passbook</li>
               <li>7. PAN Card</li>
               <li>8. Theme Video 2023</li>
+              <li>
+                9. Budget Declaration: Attach a budget declaration on the
+                official Puja Committee letterhead, signed and stamped by the
+                Treasurer.
+              </li>
             </ul>
           </div>
         </div>
